Update from all the stuff ive been working on
should have been added a long time ago. its mostly the upload page which is more than half done, but it also includes shuffling files around and all that.

--- a/bingo-app/jsx-src/styles/cardPage.scss
+++ b/bingo-app/jsx-src/styles/cardPage.scss
@@ -1,3 +1,5 @@
+@use './main.scss' as main;
+
 html {
     position: relative;
 }
@@ -124,7 +126,7 @@ h2 {
 }
 
 .tile-standard {
-    background-color: #FFFFFF;
+    background-color: main.$color_fourth;
     position: relative;
     top: 0;
     left: 0;
