near feature complete
its nearly there so effin close. want to add description button to the actual bingo card, and need SSL.

--- a/bingo-app/oldpublic/css/main.css
+++ b/bingo-app/oldpublic/css/main.css
@@ -42,3 +42,9 @@ button, input[type=button] {
     padding-left: 5px;
     padding-right: 5px;
 }
+
+.cropt-container .cr-boundary 
+.cropt-container .cr-boundary,
+.cropt-container .cr-slider-wrap {
+    width: 100%;
+}
